--- a/src/component/Category.css
+++ b/src/component/Category.css
@@ -18,7 +18,7 @@
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    width: 350px;
+    width: 30%
     height: 350px;
     padding: 30px;
   }
