--- a/src/component/Category.css
+++ b/src/component/Category.css
@@ -8,7 +8,7 @@
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-    gap: 30px;
+    justify-content:space-between;
   }
   .category-item{ 
     display: flex;
@@ -37,4 +37,9 @@
     text-transform: uppercase;
     font-weight: 500;
   }
-  
+  @media (max-width:768px){
+       .category-item{
+           width:100%;
+       }
+  }
+      
