--- a/src/component/Offers.css
+++ b/src/component/Offers.css
@@ -14,6 +14,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    width:45%;
 }
 .offer-2{ 
     background-image: url(https://glitch-io.github.io/EcommWebsite/img/cta-2.jpg);
@@ -25,6 +26,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    width:45%;
 }
 .offers h3{ 
     font-size: 20px;
@@ -68,6 +70,12 @@
 .service-name p{ 
     font-size: 14px;
     font-weight: normal;
+}
+
+@media (max-width:768px){
+    .offer-1, .offer-2{
+        width:100%;
+    }
 }
 /* .services ul li .img-div{  
     display: flex;
